--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 </head>
 <body>
-    <header>
+    <header class="fixed-top">
         <nav class="navbar navbar-expand-lg bg-nav">
             <div class="container-fluid nav-space">
               <a class="navbar-brand" href="#"><img style="width: 40px; height: 50px;" src="images/icons/logo.png" alt=""></a>
@@ -32,7 +32,7 @@
           </nav>
     </header> <br><br>
     <main>
-        <section class="bg-white container">
+        <section style="margin-top: 100px;" class="bg-white container">
             <h3 class="top-head">Top Player</h3>
                 <div class="">
                     <div>
